plugins {
  id 'application'
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'io.javalin:javalin:5.6.3'
  implementation 'org.slf4j:slf4j-simple:2.0.7'

  testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
}

test {
  useJUnitPlatform()
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(20)
  }
}

application {
  mainClass = 'org.victorrobotics.devilscoutserver.Main'
}

jar {
  manifest {
    attributes 'Main-Class': application.mainClass
  }

  from {
    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  }
}

tasks.withType(Tar) {
   duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(Zip) {
   duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
